Fixed the wrap and the footer, added some more data

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ header {
     padding-left: 1250px;
 }
 
-header ul, footer ul {
+header ul {
     display: inline-flex;
     list-style-type: none;
 }
@@ -66,9 +66,12 @@ h1, h2, h3 {
 
 footer {
     background-color: #ecf0f1;
-    margin: 0px;
 }
 
 footer ul {
-    margin: 15px;
+    margin: 10px;
+}
+
+footer h1{
+    margin-left: 25px;
 }
